Docker setup for running Airflow

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,14 +18,15 @@ x-airflow-common:
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.session'
     AIRFLOW__SECRETS__BACKEND: airflow.secrets.local_filesystem.LocalFilesystemBackend
     AIRFLOW__SECRETS__BACKEND_KWARGS: '{"variables_file_path": "/opt/secrets/variables.yaml", "connections_file_path": "/opt/secrets/connections.yaml"}'
+    AIRFLOW_UID: ${AIRFLOW_UID:-501}
   volumes:
-    - ${AIRFLOW_DAGS}:/opt/airflow/dags
-    - ${AIRFLOW_LOGS}:/opt/airflow/logs
-    - ${AIRFLOW_PLUGINS}:/opt/airflow/plugins
-    - ${AIRFLOW_SECRETS}:/opt/secrets
+    - ${AIRFLOW_PROJ_DIR:-./src/mlcore/pipeline/airflow}/dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR:-./src/mlcore/pipeline/airflow}/logs:/opt/airflow/logs
+    - ${AIRFLOW_PROJ_DIR:-./src/mlcore/pipeline/airflow}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-./src/mlcore/pipeline/airflow}/secrets:/opt/secrets
   networks:
     - airflow
-  user: "${AIRFLOW_UID:-50000}:0"
+  user: "${AIRFLOW_UID:-501}:0"
   depends_on:
     &airflow-common-depends-on
     postgres:
@@ -154,7 +155,7 @@ services:
       _PIP_ADDITIONAL_REQUIREMENTS: ''
     user: "0:0"
     volumes:
-      - .:/sources
+      - ./src/mlcore/pipeline/airflow:/sources
 
 networks:
     airflow:
