--- a/pipeline/airflow/dags/src/mlcore/config/config.yaml
+++ b/pipeline/airflow/dags/src/mlcore/config/config.yaml
@@ -55,8 +55,9 @@ data_transformation:
 
 model_trainer:
   root_dir: src/mlcore/artifacts/model_training
-  train_data_path: src/mlcore/artifacts/data_transformation/train.parquet.gzip
-  test_data_path: src/mlcore/artifacts/data_transformation/test.parquet.gzip
+  train_path: src/mlcore/artifacts/data_transformation/train_data.parquet
+  val_path: src/mlcore/artifacts/data_transformation/val_data.parquet
+  test_path: src/mlcore/artifacts/data_transformation/test_data.parquet
   model_name: model.joblib
 
 ### ================================================================
