--- a/pipeline/airflow/dags/src/mlcore/config/config.yaml
+++ b/pipeline/airflow/dags/src/mlcore/config/config.yaml
@@ -57,7 +57,6 @@ model_trainer:
   root_dir: src/mlcore/artifacts/model_training
   train_path: src/mlcore/artifacts/data_transformation/train_data.parquet
   val_path: src/mlcore/artifacts/data_transformation/val_data.parquet
-  test_path: src/mlcore/artifacts/data_transformation/test_data.parquet
   model_name: model.joblib
 
 ### ================================================================
@@ -66,8 +65,9 @@ model_trainer:
 
 model_evaluation:
   root_dir: src/mlcore/artifacts/model_evaluation
-  train_data_path: src/mlcore/artifacts/data_transformation/train.parquet.gzip
-  test_data_path: src/mlcore/artifacts/data_transformation/test.parquet.gzip
+  train_path: src/mlcore/artifacts/data_transformation/train_data.parquet
+  val_path: src/mlcore/artifacts/data_transformation/val_data.parquet
+  test_path: src/mlcore/artifacts/data_transformation/test_data.parquet
   model_path: src/mlcore/artifacts/model_training/model.joblib
   metric_file_name: src/mlcore/artifacts/model_evaluation/metrics.json
   mlflow_uri: http://internal.docker.com:5000/
