--- a/pipeline/airflow/docker-compose.yaml
+++ b/pipeline/airflow/docker-compose.yaml
@@ -63,16 +63,17 @@ x-airflow-common:
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__WEBSERVER__SECRET_KEY: 'abcdefghij'
     AIRFLOW__CORE__EXECUTE_TASKS_NEW_PYTHON_INTERPRETER: 'true'
+    AIRFLOW__CORE__ENABLE_XCOM_PICKLING: 'true'
 
     ## SMTP Environment variables
     AIRFLOW__SMTP__SMTP_HOST: smtp.gmail.com
     AIRFLOW__SMTP__SMTP_STARTTLS: True
     AIRFLOW__SMTP__SMTP_SSL: False
-    AIRFLOW__SMTP__SMTP_USER: venkateshgopi24@gmail.com
-    AIRFLOW__SMTP__SMTP_PASSWORD: flsk peoo gncm dsdd
+    AIRFLOW__SMTP__SMTP_USER: akhilkn8@gmail.com
+    AIRFLOW__SMTP__SMTP_PASSWORD: dlis uegl hyzl qxjd
     AIRFLOW__SMTP__SMTP_PORT: 587
-    AIRFLOW__SMTP__SMTP_MAIL_FROM: venkateshgopi24@gmail.com
-    AIRFLOW__SMTP__SMTP_RETRY_LIMIT: 5
+    AIRFLOW__SMTP__SMTP_MAIL_FROM: akhilkn8@gmail.com
+    AIRFLOW__SMTP__SMTP_RETRY_LIMIT: 2
     AIRFLOW__SMTP__SMTP_TIMEOUT: 30
     ## 
 
