--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__/
 *$py.class
 *.DS_Store
 *gcs_key.json
+*gcp_key_deb.json
+*.terraform.*
 
 # Datasets (huge!)
 # pipeline/airflow/dags/src/mlcore/artifacts/data_ingestion/cremad/AudioWAV/*
