--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__/
 *gcs_key.json
 *gcp_key_deb.json
 *.terraform.*
-
+pipeline/terraform/terraform.tfstate
 # Datasets (huge!)
 # pipeline/airflow/dags/src/mlcore/artifacts/data_ingestion/cremad/AudioWAV/*
 # pipeline/airflow/dags/src/mlcore/artifacts/data_ingestion/ravdess/Actor*
@@ -177,3 +177,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+pipeline/terraform/terraform.tfstate
+pipeline/terraform/terraform.tfstate.backup
