moved smtp creds to env file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,15 +24,15 @@ x-airflow-common:
     AIRFLOW__CORE__ENABLE_XCOM_PICKLING: 'true'
 
     ## SMTP Environment variables
-    AIRFLOW__SMTP__SMTP_HOST: smtp.gmail.com
-    AIRFLOW__SMTP__SMTP_STARTTLS: True
-    AIRFLOW__SMTP__SMTP_SSL: False
-    AIRFLOW__SMTP__SMTP_USER: akhilkn8@gmail.com
-    AIRFLOW__SMTP__SMTP_PASSWORD: dlis uegl hyzl qxjd
-    AIRFLOW__SMTP__SMTP_PORT: 587
-    AIRFLOW__SMTP__SMTP_MAIL_FROM: akhilkn8@gmail.com
-    AIRFLOW__SMTP__SMTP_RETRY_LIMIT: 2
-    AIRFLOW__SMTP__SMTP_TIMEOUT: 30
+    AIRFLOW__SMTP__SMTP_HOST: ${AIRFLOW_SMTP_SMTP_HOST}
+    AIRFLOW__SMTP__SMTP_STARTTLS: ${AIRFLOW_SMTP_SMTP_STARTTLS}
+    AIRFLOW__SMTP__SMTP_SSL: ${AIRFLOW_SMTP_SMTP_SSL}
+    AIRFLOW__SMTP__SMTP_USER: ${AIRFLOW_SMTP_SMTP_USER}
+    AIRFLOW__SMTP__SMTP_PASSWORD: ${AIRFLOW_SMTP_SMTP_PASSWORD}
+    AIRFLOW__SMTP__SMTP_PORT: ${AIRFLOW_SMTP_SMTP_PORT}
+    AIRFLOW__SMTP__SMTP_MAIL_FROM: ${AIRFLOW_SMTP_SMTP_MAIL_FROM}
+    AIRFLOW__SMTP__SMTP_RETRY_LIMIT: ${AIRFLOW_SMTP_SMTP_RETRY_LIMIT}
+    AIRFLOW__SMTP__SMTP_TIMEOUT: ${AIRFLOW_SMTP_SMTP_TIMEOUT}
     ## 
 
     # AIRFLOW__SCHEDULER__LOCAL_TASK_JOB_HEARTBEAT_SEC: 3000
