--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ x-airflow-common:
   # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.1}
   build:
     context: .
-    dockerfile: Dockerfile-airflow
+    dockerfile: Dockerfile.airflow
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -307,23 +307,43 @@ services:
     networks:
       - internal
 
-  run_test_experiment:
+  # run_test_experiment:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.mlflow
+  #   platform: linux/amd64
+  #   depends_on:
+  #     - "mlflow"
+  #   environment:
+  #     - GOOGLE_APPLICATION_CREDENTIALS=${GCP_CREDS_PATH}
+  #     - MLFLOW_TRACKING_URI=http://mlflow:5000
+  #   entrypoint: >
+  #     /bin/sh -c "
+  #     python3 mlflow_tracking.py;
+  #     exit 0;
+  #     "
+  #   networks:
+  #     - internal
+
+  fastapi:
     build:
       context: .
-      dockerfile: Dockerfile-mlflow
-    platform: linux/amd64
-    depends_on:
-      - "mlflow"
+      dockerfile: Dockerfile.fastapi
+    container_name: fastapi_service
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
     environment:
-      - GOOGLE_APPLICATION_CREDENTIALS=${GCP_CREDS_PATH}
       - MLFLOW_TRACKING_URI=http://mlflow:5000
-    entrypoint: >
-      /bin/sh -c "
-      python3 mlflow_tracking.py;
-      exit 0;
-      "
     networks:
       - internal
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/docs"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 15s
+
 
 networks:
   internal:
