fixed training pipeline using FastAPI

--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -1,9 +1,11 @@
-FROM continuumio/miniconda3:latest
+FROM python:3.10.13-slim-bookworm
 
 WORKDIR /app
 
 # Update pip
-RUN pip install -U pip
+RUN apt-get update && \
+    apt-get -y install libpq-dev gcc && \
+    pip install --no-cache-dir --upgrade pip
 
 # Install FastAPI dependencies
 COPY ./pipeline/fastapi/requirements.txt ./fastapi-requirements.txt
@@ -14,6 +16,11 @@ COPY ./pipeline/fastapi .
 
 # Expose port for FastAPI
 EXPOSE 8000
+
+USER root
+COPY --chown=0 --chmod=777 ./setup.py ./README.md ./
+COPY --chown=0 --chmod=777 ./src ./src
+RUN python ./setup.py install
 
 # Run Uvicorn with FastAPI app
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
