--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -20,6 +20,7 @@ EXPOSE 8000
 USER root
 COPY --chown=0 --chmod=777 ./setup.py ./README.md ./
 COPY --chown=0 --chmod=777 ./src ./src
+COPY --chown=0 --chmod=777 ./artifacts ./artifacts
 RUN python ./setup.py install
 
 # Run Uvicorn with FastAPI app
