--- a/Dockerfile.mlflow
+++ b/Dockerfile.mlflow
@@ -15,4 +15,5 @@ COPY ./pipeline/mlflow .
 USER root
 COPY --chown=0 --chmod=777 ./setup.py ./README.md ./
 COPY --chown=0 --chmod=777 ./src ./src
+COPY --chown=0 --chmod=777 ./artifacts ./artifacts
 RUN python ./setup.py install
