--- a/Dockerfile.airflow
+++ b/Dockerfile.airflow
@@ -14,7 +14,7 @@ EXPOSE 8080
 USER root
 COPY --chown=0 --chmod=777 ./setup.py ./README.md ./
 COPY --chown=0 --chmod=777 ./src ./src
-COPY --chown=0 --chmod=777 ./artifacts ./artifacts
+COPY --chown=0 --chmod=777 ./artifacts /opt/artifacts
 COPY --chown=0 --chmod=777 ./pipeline/airflow/dags/data_pipeline.py /opt/airflow/dags/data_pipeline.py
 RUN python ./setup.py install
 
