--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ./artifacts:/opt/airflow/artifacts
+    - ./artifacts:/opt/artifacts
   user: "${AIRFLOW_UID:-0}:0"
   depends_on:
     &airflow-common-depends-on
