--- a/.github/workflows/upload-to-gcs.yml
+++ b/.github/workflows/upload-to-gcs.yml
@@ -16,28 +16,38 @@ jobs:
       name: Checkout Repo
       uses: actions/checkout@v3
 
-    # - id: 'auth'
+    - id: 'auth'
+      name: "Authenticate to Google Cloud"
+      uses: "google-github-actions/auth@v2.1.2"
+      with:
+        credentials_json: "${{ secrets.GCS_SA_KEY }}"
+
+    - id: 'upload-folder'
+      uses: 'google-github-actions/upload-cloud-storage@v2'
+      with:
+        path: 'src'
+        destination: 'gs://us-east1-airflow-orchestrat-9d0ee4bd-bucket/dags/'
+
     #   uses: 'google-github-actions/auth@v2'
     #   with:
     #     workload_identity_provider: 'projects/1016052942653/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
     #     service_account: 'speech-emotion-access-account@firm-site-417617.iam.gserviceaccount.com'
 
-    # - id: 'upload-folder'
-    #   uses: 'google-github-actions/upload-cloud-storage@v2'
+    
+    
+    # - name: Cloud Storage Uploader
+    #   uses: google-github-actions/upload-cloud-storage@v2.1.0
     #   with:
-    #     path: 'src'
-    #     destination: 'gs://us-east1-airflow-orchestrat-9d0ee4bd-bucket/dags/'
-
-
-    - name: Cloud Storage Uploader
-      uses: google-github-actions/upload-cloud-storage@v2.1.0
-
-    - name: Set up Google Cloud
-      uses: google-github-actions/setup-gcloud@latest
-      with:
-        credentials_json: $GCS_SA_KEY
-        # export_default_credentials: true
-
-    - name: Upload files to GCS
-      run: |
-        gsutil -m cp -r ./src/ gs://us-east1-airflow-orchestrat-9d0ee4bd-bucket/dags/
+      #     credentials_json: ${{ secrets.GCS_SA_KEY }}
+      
+      # - name: Set up Google Cloud
+      #   uses: google-github-actions/setup-gcloud@v0.5.1
+      #     # export_default_credentials: true
+      
+      
+      
+      
+        
+    # - name: Upload files to GCS
+    #   run: |
+    #     gsutil -m cp -r ./src/ gs://us-east1-airflow-orchestrat-9d0ee4bd-bucket/dags/
