--- a/.github/workflows/upload-to-gcs.yml
+++ b/.github/workflows/upload-to-gcs.yml
@@ -22,6 +22,11 @@ jobs:
       with:
         credentials_json: "${{ secrets.GCS_SA_KEY }}"
 
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v2.1.0
+      with:
+        project_id: firm-site-417617
+
     - id: 'upload-folder'
       uses: 'google-github-actions/upload-cloud-storage@v2'
       with:
