--- a/.github/workflows/upload-to-gcs.yml
+++ b/.github/workflows/upload-to-gcs.yml
@@ -1,4 +1,4 @@
-name: Upload Folder to Google Cloud Storage
+name: Upload Code to Google Cloud Storage
 
 on:
   push:
@@ -7,10 +7,6 @@ on:
 jobs:
   upload-to-gcs:
     runs-on: ubuntu-latest
-    # permissions:
-    #   contents: 'read'
-    #   id-token: 'write'
-
     steps:
     - id: checkout
       name: Checkout Repo
@@ -27,32 +23,8 @@ jobs:
       with:
         project_id: firm-site-417617
 
-    - id: 'upload-folder'
+    - name: 'Upload Source Code into DAGs'
       uses: 'google-github-actions/upload-cloud-storage@v2'
       with:
-        path: 'src'
+        path: 'src/mlcore'
         destination: 'us-east1-airflow-orchestrat-9d0ee4bd-bucket/dags/'
-
-    #   uses: 'google-github-actions/auth@v2'
-    #   with:
-    #     workload_identity_provider: 'projects/1016052942653/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
-    #     service_account: 'speech-emotion-access-account@firm-site-417617.iam.gserviceaccount.com'
-
-    
-    
-    # - name: Cloud Storage Uploader
-    #   uses: google-github-actions/upload-cloud-storage@v2.1.0
-    #   with:
-      #     credentials_json: ${{ secrets.GCS_SA_KEY }}
-      
-      # - name: Set up Google Cloud
-      #   uses: google-github-actions/setup-gcloud@v0.5.1
-      #     # export_default_credentials: true
-      
-      
-      
-      
-        
-    # - name: Upload files to GCS
-    #   run: |
-    #     gsutil -m cp -r ./src/ gs://us-east1-airflow-orchestrat-9d0ee4bd-bucket/dags/
